welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: value or is not a member of Boolean
  if ( hour <7 or hour >20) {
               ^